deployment/customer-api/overlays/preview/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: customer-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: customer-api
    spec:
      containers:
        - name: customer-api
          image: ghcr.io/teck-lab/teck-cloud-customer-api:preview
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: grpc
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
