deployment/customer-api/overlays/preview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-api
spec:
  selector:
    app.kubernetes.io/name: customer-api
  ports:
    - name: http
      appProtocol: kubernetes.io/h2c
      port: 80
      targetPort: http
      protocol: TCP
