deployment/customer-api/overlays/preview/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: customer-api
  annotations:
    external-dns.alpha.kubernetes.io/hostname: customer-api-pr-0.tecklab.dk
spec:
  parentRefs:
    - name: external-gateway
      namespace: kgateway-system
  hostnames:
    - customer-api-pr-0.tecklab.dk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: customer-api
          port: 80
